--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="resources/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&display=swap" rel="stylesheet">
-
+  <script src="resources/js/projects.js"></script>
   <title>Dashboard</title>
 </head>
 
@@ -24,7 +24,7 @@
 
 
     <div class="card-holder" id="projectList">
-      <div class="project-card active-card flex-box">
+      <!-- <div class="project-card active-card flex-box">
         <p>Project Name</p>
         <svg class="card-circle">
           <circle class="circle" cx="30px" cy="30px" r="30px"></circle>
@@ -44,7 +44,7 @@
           <circle class="circle" cx="30px" cy="30px" r="30px"></circle>
           <circle class="circle" cx="30px" cy="30px" r="30px"></circle>
         </svg>
-      </div>
+      </div> -->
     </div>
 
   </section>
