Fix bug in tabs: Remove settabs function from html and add event listener

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <section class="middle-tabs">
       <div class="tab-buttons flex-box">
         <div class="button-box flex-box">
-          <button class="active-tab" onclick="setTabs(0)">Details</button>
-          <button onclick="setTabs(1)">Resources</button>
-          <button onclick="setTabs(2)">Invoice</button>
+          <button class="active-tab" data-index="0">Details</button>
+          <button data-index="1">Resources</button>
+          <button data-index="2">Invoice</button>
         </div>
         <button class="edit-details-btn">Edit Details</button>
       </div>
