--- a/index.html
+++ b/index.html
@@ -250,38 +250,38 @@
     <hr class="add-project-line">
     <div class="project-name-group group flex-box">
       <label for="project-name">Project Name</label>
-      <input type="text" name="project-name" id="project-name">
+      <input type="text" name="project-name" id="project-name" class="add-project-validate" required>
       <p class="project-name-error"></p>
     </div>
 
     <div class="project-description-group group flex-box">
       <label for="project-description">Project Description</label>
-      <textarea name="project-description" id="project-description"></textarea>
+      <textarea name="project-description" id="project-description" class="add-project-validate" required></textarea>
       <p class="project-description-error"></p>
     </div>
 
     <div class="project-technologies-group group flex-box">
       <label for="project-technologies">Project Technologies</label>
-      <input type="text" name="project-technologies" id="project-technologies">
+      <input type="text" name="project-technologies" id="project-technologies" class="add-project-validate" required>
       <p class="project-technologies-error"></p>
     </div>
 
     <div class="project-percentage-group group flex-box">
       <label for="project-percentage">Percentage Completed</label>
-      <input type="text" name="project-percentage" id="project-percentage">
+      <input type="text" name="project-percentage" id="project-percentage" class="add-project-validate" required>
       <p class="project-percentage-error"></p>
     </div>
 
     <div class="date-set-box flex-box">
       <div class="project-startDate-group flex-box">
         <label for="project-startDate">Start Date</label>
-        <input type="text" name="project-startDate" id="project-startDate">
+        <input type="text" name="project-startDate" id="project-startDate" class="add-project-validate" required>
         <p class="project-startDate-error"></p>
       </div>
 
       <div class="project-endDate-group flex-box">
         <label for="project-endDate">End Date</label>
-        <input type="text" name="project-endDate" id="project-endDate">
+        <input type="text" name="project-endDate" id="project-endDate" class="add-project-validate" required>
         <p class="project-endDate-error"></p>
       </div>
     </div>
