commented code for autocomplete

--- a/index.html
+++ b/index.html
@@ -266,6 +266,11 @@
     <div class="project-technologies-group group flex-box">
       <label for="project-technologies">Project Technologies</label>
       <input type="text" name="project-technologies" id="project-technologies" class="add-project-validate" data-role="tagsinput" required>
+      <!-- <div class="autocomplete">
+        <p>jdhgfa</p>
+        <hr class="autocomplete-hr">
+        <p>dfgag</p>
+      </div> -->
       <p class="project-technologies-error"></p>
     </div>
 
