Make table design flat

--- a/index.html
+++ b/index.html
@@ -306,19 +306,19 @@
     <hr class="edit-project-line">
     <div class="project-name-group group flex-box">
       <label for="project-name">Project Name</label>
-      <input type="text" name="project-name" id="project-name" class="add-project-validate" required>
+      <input type="text" name="project-name" id="project-name-edit" class="add-project-validate" required>
       <p class="project-name-error"></p>
     </div>
   
     <div class="project-description-group group flex-box">
       <label for="project-description">Project Description</label>
-      <textarea name="project-description" id="project-description" class="add-project-validate" required></textarea>
+      <textarea name="project-description" id="project-description-edit" class="add-project-validate" required></textarea>
       <p class="project-description-error"></p>
     </div>
   
     <div class="project-technologies-group group flex-box">
       <label for="project-technologies">Project Technologies</label>
-      <input type="text" name="project-technologies" id="project-technologies" class="add-project-validate"
+      <input type="text" name="project-technologies" id="project-technologies-edit" class="add-project-validate"
         data-role="tagsinput" required>
       <!-- <div class="autocomplete">
           <p>jdhgfa</p>
@@ -330,20 +330,20 @@
   
     <div class="project-percentage-group group flex-box">
       <label for="project-percentage">Percentage Completed</label>
-      <input type="text" name="project-percentage" id="project-percentage" class="add-project-validate" required>
+      <input type="text" name="project-percentage" id="project-percentage-edit" class="add-project-validate" required>
       <p class="project-percentage-error"></p>
     </div>
   
     <div class="date-set-box flex-box">
       <div class="project-startDate-group flex-box">
         <label for="project-startDate">Start Date</label>
-        <input type="date" name="project-startDate" id="project-startDate" class="add-project-validate" required>
+        <input type="date" name="project-startDate" id="project-startDate-edit" class="add-project-validate" required>
         <p class="project-startDate-error"></p>
       </div>
   
       <div class="project-endDate-group flex-box">
         <label for="project-endDate">End Date</label>
-        <input type="date" name="project-endDate" id="project-endDate" class="add-project-validate" required>
+        <input type="date" name="project-endDate" id="project-endDate-edit" class="add-project-validate" required>
         <p class="project-endDate-error"></p>
       </div>
     </div>
