--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
     <div class="popup-button-box flex-box">
       <button class="add-project-popup-btn">Add</button>
-      <button class="cancel-popup-btn">Cancel</button>
+      <button class="cancel-add-btn">Cancel</button>
     </div>
   </section>
 
@@ -304,53 +304,53 @@
   <section class="popup edit-project-popup">
     <h3 class="edit-project-heading">Edit Project</h3>
     <hr class="edit-project-line">
-    <div class="project-name-group group flex-box">
+    <div class="edit-project-name-group group flex-box">
       <label for="project-name">Project Name</label>
-      <input type="text" name="project-name" id="project-name-edit" class="add-project-validate" required>
-      <p class="project-name-error"></p>
+      <input type="text" name="project-name" id="project-name-edit" class="edit-project-validate" required>
+      <p class="project-name-edit-error"></p>
     </div>
   
-    <div class="project-description-group group flex-box">
+    <div class="edit-project-description-group group flex-box">
       <label for="project-description">Project Description</label>
-      <textarea name="project-description" id="project-description-edit" class="add-project-validate" required></textarea>
-      <p class="project-description-error"></p>
+      <textarea name="project-description" id="project-description-edit" class="edit-project-validate" required></textarea>
+      <p class="project-description-edit-error"></p>
     </div>
   
-    <div class="project-technologies-group group flex-box">
+    <div class="edit-project-technologies-group group flex-box">
       <label for="project-technologies">Project Technologies</label>
-      <input type="text" name="project-technologies" id="project-technologies-edit" class="add-project-validate"
+      <input type="text" name="project-technologies" id="project-technologies-edit" class="edit-project-validate"
         data-role="tagsinput" required>
       <!-- <div class="autocomplete">
           <p>jdhgfa</p>
           <hr class="autocomplete-hr">
           <p>dfgag</p>
         </div> -->
-      <p class="project-technologies-error"></p>
+      <p class="project-technologies-edit-error"></p>
     </div>
   
-    <div class="project-percentage-group group flex-box">
+    <div class="edit-project-percentage-group group flex-box">
       <label for="project-percentage">Percentage Completed</label>
-      <input type="text" name="project-percentage" id="project-percentage-edit" class="add-project-validate" required>
-      <p class="project-percentage-error"></p>
+      <input type="text" name="project-percentage" id="project-percentage-edit" class="edit-project-validate" required>
+      <p class="project-percentage-edit-error"></p>
     </div>
   
     <div class="date-set-box flex-box">
-      <div class="project-startDate-group flex-box">
+      <div class="edit-project-startDate-group flex-box">
         <label for="project-startDate">Start Date</label>
-        <input type="date" name="project-startDate" id="project-startDate-edit" class="add-project-validate" required>
-        <p class="project-startDate-error"></p>
+        <input type="date" name="project-startDate" id="project-startDate-edit" class="edit-project-validate" required>
+        <p class="project-startDate-edit-error"></p>
       </div>
   
-      <div class="project-endDate-group flex-box">
+      <div class="edit-project-endDate-group flex-box">
         <label for="project-endDate">End Date</label>
-        <input type="date" name="project-endDate" id="project-endDate-edit" class="add-project-validate" required>
-        <p class="project-endDate-error"></p>
+        <input type="date" name="project-endDate" id="project-endDate-edit" class="edit-project-validate" required>
+        <p class="project-endDate-edit-error"></p>
       </div>
     </div>
   
     <div class="popup-button-box flex-box">
       <button class="edit-project-popup-btn">Update</button>
-      <button class="cancel-popup-btn">Cancel</button>
+      <button class="cancel-edit-btn">Cancel</button>
     </div>
   </section>
 
