Added data to details tab

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="tab-content" data-editable="true">
         <div class="tab-container flex-box">
 
-            <div class="left-side-details">
+            <!--div class="left-side-details">
               <p class="heading">Project Name:</p>
               <p class="content">Name of the project</p>
             
@@ -121,9 +121,10 @@
                 <circle cx="65px" cy="65px" r="65px"></circle>
               </svg>
               <p class="percentage-completed">80%</p>
-            </div>
+            </div-->
         </div>
       </div>
+      
       <!-- Second tab -->
       <div class="tab-content" data-editable="false">
         <button class="add-resources-btn">Add Resources</button>
@@ -247,6 +248,7 @@
   
   <script type="module" src="resources/js/api.js"></script>
   <script type="module" src="resources/js/common.js"></script>
+  <script type="module" src="resources/js/details.js"></script>
 </body>
 
 </html>
