--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <td>thejus@qburst.com</td>
                 <td>true</td>
                 <td>100</td>
-                <td class="edit-resource">Ed</td>
+                <td class="edit-resource"><ion-icon name="create-outline"></ion-icon></td>
                 <td class="delete-resource">Del</td>
               </tr>
               <tr>
@@ -153,7 +153,7 @@
                 <td>thejus@qburst.com</td>
                 <td>true</td>
                 <td>100</td>
-                <td class="edit-resource">Ed</td>
+                <td class="edit-resource"><ion-icon name="create-outline"></td>
                 <td class="delete-resource">Del</td>
               </tr>
               <tr>
@@ -161,7 +161,7 @@
                 <td>thejus@qburst.com</td>
                 <td>true</td>
                 <td>100</td>
-                <td class="edit-resource">Ed</td>
+                <td class="edit-resource"><ion-icon name="create-outline"></td>
                 <td class="delete-resource">Del</td>
               </tr>
           
@@ -430,6 +430,7 @@
 
   <script type="module" src="resources/js/api.js"></script>
   <script type="module" src="resources/js/common.js"></script>
+  <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
 </body>
