validating and editing details

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   
     <div class="edit-project-description-group group flex-box">
       <label for="Description">Project Description</label>
-      <textarea name="project-description" id="Description-edit" class="edit-project-validate" required></textarea>
+      <textarea name="Description" id="project-description-edit" class="edit-project-validate" required></textarea>
       <p class="project-description-edit-error"></p>
     </div>
   
@@ -392,7 +392,7 @@
       </div>
     </section>
 
-    <!-- Pop up - Add resources -->
+    <!-- Pop up - Edit resources -->
     <section class="popup edit-resources-popup">
       <h3 class="add-resources-heading">Add Resources</h3>
       <hr class="edit-project-line">
