Tested get from server

--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
   <script type="module" src="resources/js/api.js"></script>
   <script type="module" src="resources/js/common.js"></script>
   <script type="module" src="resources/js/details.js"></script>
+  <script type="module" src="resources/js/resources.js"></script>
   <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
