Made resources table dynamic using server

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div style="overflow-x:auto;">
           <table class="resource-table">
-            <thead>
+            <!-- <thead>
               <th>Name</th>
               <th>Email</th>
               <th>Billable</th>
@@ -164,7 +164,7 @@
                 <td>100</td>
                 <td class="edit-resource"><ion-icon name="create-outline"></td>
                 <td class="delete-resource">Del</td>
-              </tr>
+              </tr> -->
           
             </tbody>
           </table>
