--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
     <h3 class="add-project-heading">Add Project</h3>
     <hr class="add-project-line">
     <div class="project-name-group group flex-box">
-      <label for="Project Name">Project Name</label>
+      <label for="Project Name">Name</label>
       <input type="text" name="Project Name" id="project-name" class="add-project-validate" required>
       <p class="project-name-error"></p>
     </div>
 
     <div class="project-description-group group flex-box">
-      <label for="Description">Project Description</label>
+      <label for="Description">Description</label>
       <textarea name="Description" id="project-description" class="add-project-validate" required></textarea>
       <p class="project-description-error"></p>
     </div>
 
     <div class="project-technologies-group group flex-box">
-      <label for="Technologies">Project Technologies</label>
+      <label for="Technologies">Technologies</label>
       <input type="text" name="Technologies" id="project-technologies" class="add-project-validate" data-role="tagsinput" required>
       <!-- <div class="autocomplete">
         <p>jdhgfa</p>
@@ -224,19 +224,19 @@
     <h3 class="edit-project-heading">Edit Project</h3>
     <hr class="edit-project-line">
     <div class="edit-project-name-group group flex-box">
-      <label for="Project Name">Project Name</label>
+      <label for="Project Name">Name</label>
       <input type="text" name="Project Name" id="project-name-edit" class="edit-project-validate" required>
       <p class="project-name-edit-error"></p>
     </div>
   
     <div class="edit-project-description-group group flex-box">
-      <label for="Description">Project Description</label>
+      <label for="Description">Description</label>
       <textarea name="Description" id="project-description-edit" class="edit-project-validate" required></textarea>
       <p class="project-description-edit-error"></p>
     </div>
   
     <div class="edit-project-technologies-group group flex-box">
-      <label for="Technologies">Project Technologies</label>
+      <label for="Technologies">Technologies</label>
       <input type="text" name="Technologies" id="project-technologies-edit" class="edit-project-validate"
         data-role="tagsinput" required>
       <!-- <div class="autocomplete">
@@ -312,7 +312,7 @@
 
     <!-- Pop up - Edit resources -->
     <section class="popup edit-resources-popup">
-      <h3 class="add-resources-heading">Add Resources</h3>
+      <h3 class="add-resources-heading">Edit Resources</h3>
       <hr class="edit-project-line">
     
       <div class="edit-resources-name-group group flex-box">
@@ -342,7 +342,7 @@
       </div>
     
       <div class="popup-button-box flex-box">
-        <button class="edit-resources-popup-btn">Add</button>
+        <button class="edit-resources-popup-btn">Edit</button>
         <button class="cancel-edit-resources-btn">Cancel</button>
       </div>
     </section>
