interchange positions of add and cancel buttons in all popups

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
     </div>
 
     <div class="popup-button-box flex-box">
-      <button class="add-project-popup-btn">Add</button>
       <button class="cancel-add-btn">Cancel</button>
+      <button class="add-project-popup-btn">Add</button>
     </div>
   </section>
 
@@ -268,8 +268,8 @@
     </div>
   
     <div class="popup-button-box flex-box">
-      <button class="edit-project-popup-btn">Update</button>
       <button class="cancel-edit-btn">Cancel</button>
+      <button class="edit-project-popup-btn">Update</button>
     </div>
   </section>
 
@@ -305,8 +305,8 @@
       </div>
 
       <div class="popup-button-box flex-box">
-        <button class="add-resources-popup-btn">Add</button>
         <button class="cancel-add-resources-btn">Cancel</button>
+        <button class="add-resources-popup-btn">Add</button>
       </div>
     </section>
 
@@ -342,8 +342,8 @@
       </div>
     
       <div class="popup-button-box flex-box">
-        <button class="edit-resources-popup-btn">Edit</button>
         <button class="cancel-edit-resources-btn">Cancel</button>
+        <button class="edit-resources-popup-btn">Update</button>
       </div>
     </section>
 
