Made add project and resource buttons to + sighn

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
     </div>
 
-
-    <button class="add-project-btn">+ Add Projects</button>
+    <span class="add-projects-label"><button class="add-project-btn">+</button>Add Projects</span>
 
 
     <div class="card-holder" id="projectList">
@@ -80,7 +79,7 @@
       
       <!-- Second tab -->
       <div class="tab-content" data-editable="false">
-        <button class="add-resources-btn">Add Resources</button>
+        <span class="add-resources-label"><button class="add-resources-btn">+</button>Add Resources</span>
 
         <div class="scroll-box">
           <div style="overflow-x:auto;">
