Change footer size and made responsive

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="tab-content" data-editable="false">
         <span class="add-resources-label"><button class="add-resources-btn">+</button>Add Resources</span>
 
-        <div class="scroll-box">
+        <div class=" resource-table-scroll scroll-box">
           <div style="overflow-x:auto;">
             <table class="resource-table">
           
