Add tag view tech field for edit projects popup

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <p class="rate-add-error"></p>
       </div>
 
-      <div class="popup-button-box flex-box">
+      <div class="popup-button-box flex-box resource-buttons">
         <button class="cancel-add-resources-btn">Cancel</button>
         <button class="add-resources-popup-btn">Add</button>
       </div>
@@ -338,7 +338,7 @@
         <p class="edit-rate-add-error"></p>
       </div>
     
-      <div class="popup-button-box flex-box">
+      <div class="popup-button-box flex-box resource-buttons">
         <button class="cancel-edit-resources-btn">Cancel</button>
         <button class="edit-resources-popup-btn">Update</button>
       </div>
