calculating total invoice amounts for each projects

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
       <div class="tab-content">
         <div class="generate-invoice-box flex-box">
           <label for="day-count">Number of working days: </label>
-          <input type="number">
+          <input type="number" name="day-count" id="working-days">
           <button class="generate-invoice-btn">Generate Invoice</button>
         </div>
         <div class="scroll-box">
           <table class="invoice-details">
-            <thead>
+            <!-- <thead>
               <th>Name</th>
               <th>Amount</th>
             </thead>
@@ -153,10 +153,10 @@
                 <td>2000</td>
               </tr>
 
-            </tbody>
+            </tbody> -->
           </table>
         </div>
-        <p class="total-amount-label">Total: <span class="total-amount">5000</span></p>
+        <p class="total-amount-label">Total: <span class="total-amount"></span></p>
       </div>
     </section>
     <!--      Middle tabs end here-->
