Remove validation bug in technologies field

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   
     <div class="edit-project-technologies-group group flex-box">
       <label for="Technologies">Technologies</label>
-      <input type="text" name="Technologies" id="project-technologies-edit" class="edit-project-validate"
+      <input type="text" name="Technologies" id="project-technologies-edit" class="edit-project-validate project-technologies-edit"
         data-role="tagsinput" required>
       <!-- <div class="autocomplete">
           <p>jdhgfa</p>
