Added variable for apis and key

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <span class="add-projects-label"><button class="add-project-btn">+</button>Add Projects</span>
-
+    <hr id="outline">
 
     <div class="card-holder" id="projectList">
     
@@ -50,7 +50,7 @@
 
       <div class="slice-two">
         <P>Welcome</P>
-        <button class="btn-red">Log Out</button>
+        <button class="btn-red"><ion-icon name="log-out-outline"></ion-icon></button>
       </div>
 
     </header>
