change input fields to number

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <div class="project-percentage-group group flex-box">
       <label for="Percentage">Percentage Completed</label>
-      <input type="text" name="Percentage" id="project-percentage" class="add-project-validate" required>
+      <input type="number" name="Percentage" id="project-percentage" class="add-project-validate" required>
       <p class="project-percentage-error"></p>
     </div>
 
@@ -246,7 +246,7 @@
   
     <div class="edit-project-percentage-group group flex-box">
       <label for="Percentage">Percentage Completed</label>
-      <input type="text" name="Percentage" id="project-percentage-edit" class="edit-project-validate" required>
+      <input type="number" name="Percentage" id="project-percentage-edit" class="edit-project-validate" required>
       <p class="project-percentage-edit-error"></p>
     </div>
   
@@ -297,7 +297,7 @@
 
       <div class="add-resources-rate-group group flex-box">
         <label for="Rate">Rate per hour</label>
-        <input type="text" name="Rate" id="rate-add" class="add-resources-validate" required>
+        <input type="number" name="Rate" id="rate-add" class="add-resources-validate" required>
         <p class="rate-add-error"></p>
       </div>
 
@@ -334,7 +334,7 @@
     
       <div class="add-resources-rate-group group flex-box">
         <label for="Rate">Rate per hour</label>
-        <input type="text" name="rate" id="edit-rate-add" class="edit-resources-validate" required>
+        <input type="number" name="rate" id="edit-rate-add" class="edit-resources-validate" required>
         <p class="edit-rate-add-error"></p>
       </div>
     
