Change script tag in index file to dashboard.js

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
   <script type="module" src="resources/js/api.js"></script>
   <script type="module" src="resources/js/utils.js"></script>
-  <script type="module" src="resources/js/common.js"></script>
+  <script type="module" src="resources/js/dashboard.js"></script>
   <script type="module" src="resources/js/details.js"></script>
   <script type="module" src="resources/js/resources.js"></script>
   <script type="module" src="resources/js/invoice.js"></script>
