Handles errors if no data available

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
           <!-- Details list of project. Dynamic using JavaScript -->
           <!--  -->
 
+          <div class="no-data-div-details">
+            <img src="resources/imgs/error-img.png" alt="No Data available image">
+            <p>No Data Available</p>
+          </div>
+
         </div>
       </div>
 
@@ -98,6 +103,11 @@
               <!-- Dynamic Table with JavaScript -->
               <!--  -->
             </table>
+          </div>
+          
+          <div class="no-data-div-resource">
+            <img src="resources/imgs/error-img.png" alt="No Data available image">
+            <p>No Data Available</p>
           </div>
         </div>
 
