Reverse the order of project cards

--- a/index.html
+++ b/index.html
@@ -28,7 +28,41 @@
     </div>
     <span class="add-projects-label"><button class="add-project-btn">+</button>Add Projects</span>
     <hr id="outline">
-    <div class="card-holder" id="projectList">
+    <div class="card-holder flex-box" id="projectList">
+
+      <!-- <div class="project-card flex-box">
+        <p>Trial 1</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial 2</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial 3</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div>
+      <div class="project-card flex-box">
+        <p>Trial</p>
+      </div> -->
 
       <!--  -->
       <!-- Dynamic list of projects as cards using JavaScript -->
