error messages for project cards and invoice tab

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       <!-- Dynamic list of projects as cards using JavaScript -->
       <!--  -->
 
+      <div class="no-data-div-project">
+        <img src="resources/imgs/error-img.png" alt="No Data available image">
+        <p>No Data Available</p>
+      </div>
+
     </div>
 
   </section>
@@ -126,6 +131,10 @@
             <!--  -->
             <!-- Dynamic Table with JavaScript -->
             <!--  -->
+            <div class="no-data-div-invoice">
+              <img src="resources/imgs/error-img.png" alt="No Data available image">
+              <p>No Data Available</p>
+            </div>
           </table>
         </div>
         <p class="total-amount-label">Total: <span class="total-amount"></span></p>
