--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="button-box flex-box">
           <button class="active-tab" data-index="0">Details</button>
           <button data-index="1">Resources</button>
-          <button data-index="2">Invoice</button>
+          <button data-index="2" id="invoice-btn">Invoice</button>
         </div>
         <button class="edit-details-btn">Edit Details</button>
       </div>
