--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
   <section class="popup add-project-popup">
     <h3 class="add-project-heading">Add Project</h3>
     <hr class="add-project-line">
+    <p id="project-add-date-error"></p>
     <div class="project-name-group group flex-box">
       <label for="Project Name">Name</label>
       <input type="text" name="Project Name" id="project-name" class="add-project-validate" required>
@@ -223,6 +224,7 @@
   <section class="popup edit-project-popup">
     <h3 class="edit-project-heading">Edit Project</h3>
     <hr class="edit-project-line">
+    <p id="project-edit-date-error"></p>
     <div class="edit-project-name-group group flex-box">
       <label for="Project Name">Name</label>
       <input type="text" name="Project Name" id="project-name-edit" class="edit-project-validate" required>
