--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <span class="add-resources-label"><button class="add-resources-btn">+</button>Add Resources</span>
 
         <div class=" resource-table-scroll scroll-box">
-          <div style="overflow-x:auto;">
+          <div style="overflow-x:auto;" class="horizontal-scroll">
             <table class="resource-table">
               <!--  -->
               <!-- Dynamic Table with JavaScript -->
