Add navigation on top of header and icon for edit

--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
     <header class="flex-box">
 
       <div class="slice-one flex-box">
-        <h1>DASHBOARD</h1>
+        <div class="menu-and-title flex-box">
+          <ul class="nav-links">
+            <li> <a href="#">Projects</a> </li>
+          </ul>
+          <h1>DASHBOARD</h1>
+        </div>
+        
         <div class="mobile-hamburger">
           <div class="line"></div>
           <div class="line"></div>
@@ -95,7 +101,7 @@
           <button data-index="1">Resources</button>
           <button data-index="2" id="invoice-btn">Invoice</button>
         </div>
-        <button class="edit-details-btn">Edit Details</button>
+        <button class="edit-details-btn"><ion-icon name="create-outline" id="edit-icon"></button>
       </div>
 
       <hr class="tab-line">
