--- a/index.html
+++ b/index.html
@@ -355,6 +355,12 @@
     </div>
   </section>
 
+  <!-- Preloader -->
+  <section class="preloader-box flex-box">
+    <div class="preloader"></div>
+    <p class="loading-text">Loading... Please Wait</p>
+  </section>
+
 
   <script type="module" src="resources/js/api.js"></script>
   <script type="module" src="resources/js/utils.js"></script>
