Add confirm delete button

--- a/index.html
+++ b/index.html
@@ -349,6 +349,16 @@
     </div>
   </section>
 
+  <!-- Pop up - Delete resources -->
+  <section class="popup delete-resources-popup">
+    <h3 class="add-resources-heading">Are you sure?</h3>
+    <hr class="delete-project-line">
+
+    <div class="popup-button-box flex-box resource-buttons">
+      <button class="cancel-delete-resources-btn">Cancel</button>
+      <button class="delete-resources-popup-btn">Delete</button>
+    </div>
+  </section>
 
   <script type="module" src="resources/js/api.js"></script>
   <script type="module" src="resources/js/utils.js"></script>
