height and width of the page adjusted

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
       <div class="slice-one flex-box">
         <div class="menu-and-title flex-box">
           <ul class="nav-links">
-            <li> <a href="#">Projects</a> </li>
+            <li> <a href="dashboard.html">Dashboard</a> </li>
           </ul>
-          <h1>DASHBOARD</h1>
+          <h1>PROJECTS</h1>
         </div>
         
         <div class="mobile-hamburger">
