--- a/dashboard.html
+++ b/dashboard.html
@@ -229,14 +229,14 @@
           <div class="left-graph-container">
             <div class="graph-resources">
 
-              <canvas id="proVsTechChart" ></canvas>
+              <canvas id="proVsTechChart" width="400" height="350"></canvas>
             </div>
 
           </div>
           <div class="right-graph-container">
             <div class="graph-technologies">
       
-              <canvas id="proVsResourcesChart" ></canvas>
+              <canvas id="proVsResourcesChart" width="400" height="330"></canvas>
             </div>
 
           </div>
@@ -290,8 +290,8 @@
     crossorigin="anonymous"></script>
 
   <script>
-    let projectNames = ['Notes App', 'Online Private Tutors Finder System', 'Minecraft', 'Voice based Intelligent Virtual Assistance']
-    let technologiesInProject = [7, 2, 3, 4]
+    let projectNames = ['Notes App', 'Online Private Tutors Finder System', 'Minecraft', 'Voice based Intelligent Virtual Assistance', 'Online Private Tutors Finder ', 'Minecrat', 'Voice based Intelligent Virtual Assistan']
+    let technologiesInProject = [7, 2, 3, 4, 9, 1, 5]
 
     let proVsTechChart = document.getElementById('proVsTechChart').getContext('2d');
     
@@ -302,7 +302,7 @@
         datasets: [{
           label: 'Technologies',
           data: technologiesInProject,
-          backgroundColor: ['#49d8a0', '#6ed57c', '#92cf57', '#dbb809'],
+          backgroundColor: ['#49d8a0', '#6ed57c', '#92cf57', '#dbb809','#dbb409','#dbb509','#dbb822'],
           borderWidth: 1,
           borderColor: '#777',
           hoverBorderWidth: 3,
@@ -311,6 +311,7 @@
       },
       options: {
         responsive: false,
+        maintainAspectRatio: false,
 
         title: {
           display: true,
@@ -333,7 +334,7 @@
       }
     })
 
-    let rInProject = [3, 5, 7, 2]
+    let rInProject = [3, 5, 7, 2, 9, 1, 5]
 
     let proVsResourcesChart = document.getElementById('proVsResourcesChart').getContext('2d');
     let barChart2 = new Chart(proVsResourcesChart, {
@@ -343,7 +344,7 @@
         datasets: [{
           label: 'Resources',
           data: rInProject,
-          backgroundColor: ['#49d8a0', '#6ed57c', '#92cf57', '#dbb809'],
+          backgroundColor: ['#49d8a0', '#6ed57c', '#92cf57', '#dbb809','#fbb409','#ebb509','#dbb822'],
           borderWidth: 1,
           borderColor: '#777',
           hoverBorderWidth: 3,
@@ -359,7 +360,8 @@
           fontSize: 18
         },
         legend: {
-          display: false
+          display: true,
+          align:'start'
         },
         tooltips: {
           enabled: true
