--- a/dashboard.html
+++ b/dashboard.html
@@ -90,23 +90,23 @@
 
         <div class="counts-container">
           <div class="left-counts-container">
-            <div class="projects-count">
-              <h2>10</h2>
+            <div class="projects-count" >
+              <h2 id="all-project-count"></h2>
               <p>Projects</p>
               <img class="card-icon" src="resources/imgs/project-icon.svg">
             </div>
-            <div class="resources-count">
-              <h2>25</h2>
+            <div class="resources-count" >
+              <h2 id="all-resource-count"></h2>
               <p>Resources</p>
               <img class="card-icon" src="resources/imgs/resources-icon.svg">
             </div>
             <div class="billable-count">
-              <h2>20</h2>
+              <h2 id="all-billable-count"></h2>
               <p>Billables</p>
               <img class="card-icon" src="resources/imgs/billable-icon.svg">
             </div>
             <div class="shadow-count">
-              <h2>5</h2>
+              <h2 id="all-shadow-count"></h2>
               <p>Shadows</p>
               <img class="card-icon" src="resources/imgs/shadow-icon.svg">
             </div>
@@ -289,86 +289,9 @@
     integrity="sha512-Ok8DfwnjQhVsq3+9ToFXJjkWPL2h99aJWCg4U8w7iWA6i3kf4zgNLd7cLBdWdCqGZArRevXQAr8FGbucnZqrvw=="
     crossorigin="anonymous"></script>
 
-  <script>
-    let projectNames = ['Notes App', 'Online Private Tutors Finder System', 'Minecraft', 'Voice based Intelligent Virtual Assistance', 'Online Private Tutors Finder ', 'Minecrat', 'Voice based Intelligent Virtual Assistan']
-    let technologiesInProject = [7, 2, 3, 4, 9, 1, 5]
-
-    let proVsTechChart = document.getElementById('proVsTechChart').getContext('2d');
-    
-    let barChart1 = new Chart(proVsTechChart, {
-      type: 'bar',
-      data: {
-        labels: projectNames,
-        datasets: [{
-          label: 'Technologies',
-          data: technologiesInProject,
-          backgroundColor: ['#49d8a0', '#6ed57c', '#92cf57', '#dbb809','#dbb409','#dbb509','#dbb822'],
-          borderWidth: 1,
-          borderColor: '#777',
-          hoverBorderWidth: 3,
-          hoverBorderColor: '#000'
-        }]
-      },
-      options: {
-        responsive: false,
-        maintainAspectRatio: false,
-
-        title: {
-          display: true,
-          text: 'Project Vs Technologies',
-          fontSize: 18
-        },
-        legend: {
-          display: false
-        },
-        tooltips: {
-          enabled: true
-        },
-        scales: {
-          yAxes: [{
-            ticks: {
-              beginAtZero: true
-            }
-          }]
-        }
-      }
-    })
-
-    let rInProject = [3, 5, 7, 2, 9, 1, 5]
-
-    let proVsResourcesChart = document.getElementById('proVsResourcesChart').getContext('2d');
-    let barChart2 = new Chart(proVsResourcesChart, {
-      type: 'pie',
-      data: {
-        labels: projectNames,
-        datasets: [{
-          label: 'Resources',
-          data: rInProject,
-          backgroundColor: ['#49d8a0', '#6ed57c', '#92cf57', '#dbb809','#fbb409','#ebb509','#dbb822'],
-          borderWidth: 1,
-          borderColor: '#777',
-          hoverBorderWidth: 3,
-          hoverBorderColor: '#000'
-        }]
-      },
-      options: {
-        responsive: true,
-
-        title: {
-          display: true,
-          text: 'Project Vs Resources',
-          fontSize: 18
-        },
-        legend: {
-          display: true,
-          align:'start'
-        },
-        tooltips: {
-          enabled: true
-        }
-      }
-    })
-  </script>
+  <script type="module" src="resources/js/api.js"></script>
+  <script type="module" src="resources/js/utils.js"></script>
+   <script type="module" src="resources/js/projectDashboard.js"></script>
 </body>
 
 </html>
