added side panel

--- a/index.html
+++ b/index.html
@@ -373,10 +373,12 @@
 
   <script type="module" src="resources/js/api.js"></script>
   <script type="module" src="resources/js/utils.js"></script>
+  <script type="module" src="resources/js/projects.js"></script>
   <script type="module" src="resources/js/dashboard.js"></script>
   <script type="module" src="resources/js/details.js"></script>
   <script type="module" src="resources/js/resources.js"></script>
   <script type="module" src="resources/js/invoice.js"></script>
+
 
   <!-- ionicons -->
   <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
