Incorporate UI changes

--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
   <section class="side-panel">
     <div class="head-text-logo flex-box">
       <div class="logo"> <img src="resources/imgs/user.png" alt="User Icon"> </div>
-      <p>Project Management<br>Dashboard</p>
+      <p>Project <br>Management<br>Dashboard</p>
     </div>
     <hr id="outline">
     
