--- a/dashboard.html
+++ b/dashboard.html
@@ -47,14 +47,14 @@
   <section class="side-panel">
     <div class="head-text-logo flex-box">
       <div class="logo"> <img src="resources/imgs/user.png" alt="User Icon"> </div>
-      <p>Project <br>Management<br>Dashboard</p>
+      <span class="hide-menu"><p>Project <br>Management<br>Dashboard</p></span>
     </div>
     <hr id="outline">
     
     <div class="card-holder flex-box" id="projectList">
       <ul>
-        <a href="index.html"><li><img class="" src="resources/imgs/projects.svg" style="width: 20px; margin-right: 8px;">Projects</li></a>
-        <a href="dashboard.html"><li><img class="" src="resources/imgs/dashboard.svg" style="width: 20px; margin-right: 8px;">Dashboard</li></a>
+        <a href="index.html"><li><img class="" src="resources/imgs/projects.svg" style="width: 20px; margin-right: 8px;"><span class="hide-menu">Projects</span></li></a>
+        <a href="dashboard.html"><li><img class="" src="resources/imgs/dashboard.svg" style="width: 20px; margin-right: 8px;"><span class="hide-menu">Dashboard</span></li></a>
       </ul>
     </div>
   </section>
