--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
 </head>
 
 <body class="flex-box">
+  <section class="navigation-drawer flex-box">
+    <nav>
+      <ul>
+        <li><a href="/index.html">Project</a></li>
+        <li><a href="/index.html">Dashboard</a></li>
+      </ul>
+    </nav>
+    <img><p class="drawer-handle">+</p>
+  </section>
+
   <!--    Side panel section-->
   <section class="side-panel">
 
