--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 </head>
 
 <body class="flex-box">
+  <section class="navigation-drawer flex-box">
+    <nav>
+      <ul>
+        <li><a href="/index.html">Project</a></li>
+        <li><a href="/dashboard.html">Dashboard</a></li>
+      </ul>
+    </nav>
+    <p class="drawer-handle">+</p>
+  </section>
   <!--    Side panel section-->
   <section class="side-panel">
 
@@ -70,9 +79,6 @@
 
       <div class="slice-one flex-box">
         <div class="menu-and-title flex-box">
-          <ul class="nav-links">
-            <li> <a href="dashboard.html">Dashboard</a> </li>
-          </ul>
           <h1>PROJECTS</h1>
         </div>
         
