--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <section class="navigation-drawer flex-box">
     <nav>
       <ul>
-        <li><a href="/index.html">Project</a></li>
-        <li><a href="/dashboard.html">Dashboard</a></li>
+        <li><a href="index.html">Project</a></li>
+        <li><a href="dashboard.html">Dashboard</a></li>
       </ul>
     </nav>
     <p class="drawer-handle">+</p>
